# jsonrepair-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURE_PARITY.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: benchmark.rs
docs/: benchmarking.md  cli.md  competitor-comparison.md  ecosystem-evaluations.md  fuzzing.md  llm-fallback-parsing.md  release-checklist.md  repair-options.md  streaming-api.md
docs/releases/: v0.2.0.md  v0.2.1.md
docs/reports/: benchmark-metrics.md
examples/: llm_output.rs  llm_typed_parse.rs  repair_and_parse.rs  repair_basic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: repair_parser.rs
scripts/: benchmark_report.py  compare_competitors.py  opt_round.sh
src/: chars.rs  error.rs  lib.rs  parser.rs
src/parser/: array.rs  format.rs  keyword.rs  mod.rs  number.rs  object.rs  string.rs  toplevel.rs
tests/: cli_tests.rs  number_regression_tests.rs  options_tests.rs  parity_fixture_tests.rs  repair_tests.rs  serde_tests.rs  streaming_tests.rs  writer_tests.rs
tests/fixtures/: README.md  parity_cases.json
