[package]
name = "jsonrepair-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.jsonrepair-rs]
path = ".."

[[bin]]
name = "repair_parser"
path = "fuzz_targets/repair_parser.rs"
test = false
doc = false
bench = false
